src/snapshots/alyn__ast_to_ir__test__fib.snap
---
source: src/ast_to_ir.rs
expression: "parse_and_convert(\"\n            subr fib(n: nat) nat {\n                if n < 2 {\n                    ret n;\n                } else {\n                    ret fib(n - 1) + fib(n - 2);\n                }\n            }\n        \")"
---
Ok(
    [
        if #0 u(<) 2 then local<if_true#(..)> else local<if_false#(..)>;
        :local<if_true#(..)>;
        ret #0;
        jmp local<end_if#(..)>;
        :local<if_false#(..)>;
        ret (:subr<fib>((#0 - 1)) + :subr<fib>((#0 - 2)));
        :local<end_if#(..)>,
    ],
)
