src/snapshots/alyn__ast_to_ir__test__simple_if.snap
---
source: src/ast_to_ir.rs
expression: "parse_and_convert(\"\n            subr main() {\n                if 1 < 2 {\n                    123;\n                } else {\n                    456;\n                }\n            }\n        \")"
---
Ok(
    [
        if 1 u(<) 2 then local<if_true.0> else local<if_false.1>;
        :local<if_true.0>;
        _ <- 123;
        jmp local<end_if.2>;
        :local<if_false.1>;
        _ <- 456;
        :local<end_if.2>,
    ],
)
