src/snapshots/alyn__ast_to_ir__test__simple_while.snap
---
source: src/ast_to_ir.rs
expression: "parse_and_convert(\"\n            subr test_simple_while(n: nat) {\n                while n < 100 {\n                    n = n + 1;\n                }\n                ret;\n            }\n        \")"
---
Ok(
    [
        :local<while_cond#0>;
        if %n u(<) 100 then local<while_body#1> else local<end_while#2>;
        :local<while_body#1>;
        %n <- (%n + 1);
        jmp local<while_cond#0>;
        :local<end_while#2>,
        ret,
    ],
)
