src/snapshots/alyn__ast_to_ir__test__subr_params.snap
---
source: src/ast_to_ir.rs
expression: "parse_and_convert(\"\n            subr min(a: int, b: int) int {\n                if a < b {\n                    ret a;\n                } else {\n                    ret b;\n                }\n            }\n        \")"
---
Ok(
    [
        if #0 < #1 then local<if_true#(..)> else local<if_false#(..)>;
        :local<if_true#(..)>;
        ret #0;
        jmp local<end_if#(..)>;
        :local<if_false#(..)>;
        ret #1;
        :local<end_if#(..)>,
    ],
)
